document emg support

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,3 @@
 # This is the list of MobiSurvStd's significant contributors.
-Lucas Javaudin
+Lucas Javaudin, main author
+Sebastian Hörl, implementation of EMG2023 survey
